// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClaimCard component matches the snapshot of a two line claim 1`] = `
<CardWrapper
  style={
    Object {
      "borderBottomWidth": 1,
      "borderTopWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(5, 5, 13, 0.4)",
          "fontFamily": "TT Commons",
          "fontSize": 16,
        }
      }
    >
      Given Name
    </Text>
    <Text
      style={
        Object {
          "color": "rgb(5, 5, 13)",
          "fontFamily": "TT Commons",
          "fontSize": 22,
          "marginBottom": 4,
        }
      }
    >
      Test
    </Text>
    <Text
      style={
        Object {
          "color": "rgba(5, 5, 13, 0.4)",
          "fontFamily": "TT Commons",
          "fontSize": 16,
        }
      }
    >
      Family Name
    </Text>
    <Text
      style={
        Object {
          "color": "rgb(5, 5, 13)",
          "fontFamily": "TT Commons",
          "fontSize": 22,
          "marginBottom": 4,
        }
      }
    >
      Running
    </Text>
  </View>
</CardWrapper>
`;

exports[`ClaimCard component matches the snapshot on render 1`] = `
<CardWrapper
  style={
    Object {
      "borderBottomWidth": 1,
      "borderTopWidth": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
        "marginLeft": 16,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "rgba(5, 5, 13, 0.4)",
          "fontFamily": "TT Commons",
          "fontSize": 16,
        }
      }
    >
      Family Name
    </Text>
    <Text
      style={
        Object {
          "color": "rgb(5, 5, 13)",
          "fontFamily": "TT Commons",
          "fontSize": 22,
          "marginBottom": 4,
        }
      }
    >
      Running
    </Text>
  </View>
</CardWrapper>
`;
